--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "homepage": "https://cristianst.github.io/azubiyo",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "moment": "^2.21.0",
     "react": "^16.2.0",
+    "react-dates": "^16.4.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-react": "^0.78.3",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "predeploy": "npm run build",
