--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://cristianst.github.io/azubiyo",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dates": "^16.4.0",
