--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "firebase": "^4.12.1",
     "gh-pages": "^1.1.0",
+    "jspdf": "^1.3.5",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "pdfmake": "^0.1.36",
     "react": "^16.2.0",
     "react-dates": "^16.4.0",
     "react-dom": "^16.2.0",
