Add NavBar + LogOut

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "azubiHUB - Easily manage azubi reports",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "blobby-icon.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
