--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jspdf": "^1.3.5",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "noty": "^3.1.4",
     "pdfmake": "^0.1.36",
     "react": "^16.2.0",
     "react-dates": "^16.4.0",
